hack: allow deprecated securemanager (to run under windows)